--- a/MyApp/SwiftDemo/ViewController/RootViewController/Root.storyboard
+++ b/MyApp/SwiftDemo/ViewController/RootViewController/Root.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Hng-sW-IBm">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="LWJ-Pk-lrf">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -24,7 +24,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="98Q-Gf-rd7">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Gt3-KJ-2GA">
                                     <size key="itemSize" width="50" height="50"/>
@@ -104,7 +104,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="100" y="-994"/>
+            <point key="canvasLocation" x="1039.2" y="-994.45277361319347"/>
         </scene>
         <!--Find View Controller-->
         <scene sceneID="tsq-34-Jbl">
@@ -122,7 +122,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B8r-wP-lWb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="994" y="-505"/>
+            <point key="canvasLocation" x="1932" y="-505.09745127436287"/>
         </scene>
         <!--Linkage View Controller-->
         <scene sceneID="08u-9h-IOd">
@@ -184,7 +184,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zes-Gn-mnM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1426" y="-843"/>
+            <point key="canvasLocation" x="2364" y="-843.32833583208401"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="IiX-ag-Cpf">
@@ -297,34 +297,29 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="913" y="-1290"/>
+            <point key="canvasLocation" x="1852" y="-1290.4047976011996"/>
         </scene>
-        <!--应用-->
-        <scene sceneID="T9Z-Jq-494">
+        <!--Navigation Controller-->
+        <scene sceneID="Jde-YV-lkI">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Hng-sW-IBm" customClass="NavigationController" customModule="SwiftDemo" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="应用" image="item0_1" id="j8i-up-MF7"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="LWJ-Pk-lrf" customClass="NavigationController" customModule="SwiftDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics">
-                        <color key="tintColor" red="0.6980247300924195" green="1" blue="0.97275099209066729" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </simulatedTabBarMetrics>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="PsS-Oy-rI3">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="sjW-HB-xwd">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="q2J-s2-Csx"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="aNW-Rw-Max"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="VwS-1E-Wj9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4UR-pZ-Anu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-698.39999999999998" y="-987.25637181409309"/>
+            <point key="canvasLocation" x="100" y="-994.45277361319347"/>
         </scene>
     </scenes>
     <resources>
         <image name="2" width="200" height="200"/>
         <image name="app_qrIcon" width="50" height="50"/>
-        <image name="item0_1" width="30" height="30"/>
     </resources>
 </document>
