--- a/DYTV/DYTV/Classes/Home/Controller/Home.storyboard
+++ b/DYTV/DYTV/Classes/Home/Controller/Home.storyboard
@@ -26,10 +26,10 @@
             </objects>
             <point key="canvasLocation" x="948" y="71.514242878560722"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Main Navigation Controller-->
         <scene sceneID="bxH-fn-sN3">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fj9-dZ-3qj" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fj9-dZ-3qj" customClass="MainNavigationController" customModule="DYTV" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="aJB-72-iTx">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
